# libsmalloc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
examples/: box.rs
src/: align.rs  c_api.rs  lib.rs
tests/: box.rs
tests-c/: CMakeLists.txt  freed_alloc_coaleshing.c  malloc.c  realloc.c  stress_test.c
