[package]
name = "libsmalloc"
version = "0.1.0"
edition = "2021"

[lib]
name         = "smalloc"
crate-type   = ["rlib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libc = "~0.2"
panic-abort = "~0.3"